[TEST] Open modules for JDK 17